--- a/Site/package.json
+++ b/Site/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/cytoscape": "3.2.9",
-    "@veupathdb/multi-blast": "^0.4.6",
-    "@veupathdb/preferred-organisms": "^1.1.5",
-    "@veupathdb/wdk-client": "^0.4.11",
-    "@veupathdb/web-common": "^0.1.1-alpha.11",
+    "@veupathdb/multi-blast": "^0.4.8",
+    "@veupathdb/preferred-organisms": "^1.1.8",
+    "@veupathdb/wdk-client": "^0.5.2",
+    "@veupathdb/web-common": "^0.2.0",
     "ciena-dagre": "^1.0.0",
     "cytoscape": "3.2.9",
     "cytoscape-dagre": "^1.3.0",
