--- a/Site/package.json
+++ b/Site/package.json
@@ -4,26 +4,39 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/cytoscape": "3.2.9",
-    "@veupathdb/multi-blast": "^1.0.5",
+    "@veupathdb/components": "^0.13.0",
+    "@veupathdb/coreui": "^0.16.0",
+    "@veupathdb/eda": "^2.0.0",
+    "@veupathdb/http-utils": "^1.1.0",
+    "@veupathdb/multi-blast": "^2.0.0",
     "@veupathdb/preferred-organisms": "^1.1.9",
-    "@veupathdb/wdk-client": "^0.5.13",
-    "@veupathdb/web-common": "^0.2.3",
+    "@veupathdb/study-data-access": "^0.3.0",
+    "@veupathdb/wdk-client": "^0.6.0",
+    "@veupathdb/web-common": "^0.4.0",
     "ciena-dagre": "^1.0.0",
     "core-js": "^3.21.1",
     "cytoscape": "3.2.9",
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
     "js-cookie": "^2.2.0",
-    "recoil": "^0.2.0"
-  },
-  "resolutions": {
     "react": "16",
     "react-dom": "16",
-    "@types/react": "16",
-    "@types/react-dom": "16"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.1.2",
+    "recoil": "^0.2.0",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jqueryui": "^1.12.16",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "3",
     "bubleify": "^2.0.0",
     "ify-loader": "^1.1.0"
   }
