--- a/Site/package.json
+++ b/Site/package.json
@@ -35,7 +35,9 @@
     "react-redux": "^7.2.7",
     "react-router-dom": "^5.1.2",
     "recoil": "^0.2.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
