--- a/Site/package.json
+++ b/Site/package.json
@@ -22,8 +22,9 @@
     "@veupathdb/multi-blast": "^3.0.0",
     "@veupathdb/preferred-organisms": "^1.1.11",
     "@veupathdb/study-data-access": "^0.3.1",
-    "@veupathdb/wdk-client": "^0.7.0",
-    "@veupathdb/web-common": "^0.5.1",
+    "@veupathdb/user-datasets": "^0.1.0",
+    "@veupathdb/wdk-client": "^0.7.2",
+    "@veupathdb/web-common": "^0.5.2",
     "ciena-dagre": "^1.0.0",
     "core-js": "^3.21.1",
     "cytoscape": "3.2.9",
