--- a/Site/package.json
+++ b/Site/package.json
@@ -31,6 +31,7 @@
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
     "js-cookie": "^2.2.0",
+    "notistack": "^1.0.10",
     "react": "16",
     "react-dom": "16",
     "react-redux": "^7.2.7",
