--- a/Site/.env.sample
+++ b/Site/.env.sample
@@ -9,6 +9,9 @@ VEUPATHDB_LOGIN_PASS=**********
 WDK_SERVICE_ENDPOINT=/wdk-service
 WDK_SERVICE_URL=${LEGACY_WEB_APP_URL}/service
 
+CGI_BIN_ENDPOINT=/cgi-bin
+CGI_BIN_URL=${BASE_PROXY_URL}/cgi-bin
+
 SITE_SEARCH_SERVICE_ENDPOINT=/site-search
 SITE_SEARCH_SERVICE_URL=${BASE_PROXY_URL}/site-search
 
