Add wdk-client to relativeDependencies

--- a/Site/package.json
+++ b/Site/package.json
@@ -84,6 +84,7 @@
     "webpack-merge": "^4.2.1"
   },
   "relativeDependencies": {
+    "@veupathdb/wdk-client": "../../WDKClient/Client",
     "@veupathdb/web-common": "../../EbrcWebsiteCommon/Client"
   }
 }
